[package]
name = "my-contract-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
my-contract = { path = ".." }

[[bin]]
name = "fuzz_cross_contract"
path = "fuzz_targets/fuzz_cross_contract.rs"
test = false
doc = false
